POWR-388 Adjust top searches margins and padding, add action button and description to view, change max num of displayed results, adjust permissions and no results text.

--- a/web/sites/default/config/views.view.top_search_content.yml
+++ b/web/sites/default/config/views.view.top_search_content.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_active_time_frame
     - node.type.top_search
+    - user.role.administrator
   module:
     - datetime
     - datetime_range
@@ -24,9 +25,10 @@ display:
   default:
     display_options:
       access:
-        type: perm
+        type: role
         options:
-          perm: 'access content overview'
+          role:
+            administrator: administrator
       cache:
         type: tag
       query:
@@ -460,7 +462,11 @@ display:
           id: area_text_custom
           table: views
           field: area_text_custom
+          relationship: none
+          group_type: group
+          admin_label: ''
           empty: true
+          tokenize: false
           content: 'No content available.'
           plugin_id: text_custom
       arguments: {  }
@@ -478,6 +484,20 @@ display:
         groups:
           1: AND
       display_extenders: {  }
+      header:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: false
+          content:
+            value: '<p>Top searches are used to present users a curated link list of popular and/or timely search topics under the search box on the homepage. The top searches are sorted by start date in descending order (searches with no start/end date appear last). At most 7 top searches will appear on the homepage.</p>'
+            format: rich_text
+          plugin_id: text
     display_plugin: default
     display_title: Master
     id: default
@@ -489,7 +509,7 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-        - user.permissions
+        - user.roles
       max-age: -1
       tags:
         - 'config:field.storage.node.field_active_time_frame'
@@ -523,7 +543,7 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-        - user.permissions
+        - user.roles
       max-age: -1
       tags:
         - 'config:field.storage.node.field_active_time_frame'
