--- a/web/sites/default/config/views.view.top_searches.yml
+++ b/web/sites/default/config/views.view.top_searches.yml
@@ -44,16 +44,16 @@ display:
       pager:
         type: some
         options:
-          items_per_page: 10
+          items_per_page: 7
           offset: 0
       style:
         type: html_list
         options:
           grouping: {  }
-          row_class: d-inline-block
+          row_class: 'd-inline-block pt-0'
           default_row_class: false
           type: ul
-          wrapper_class: 'item-list text-center'
+          wrapper_class: 'item-list text-center mb-5'
           class: ''
       row:
         type: fields
@@ -420,8 +420,6 @@ display:
           id: area_text_custom
           table: views
           field: area_text_custom
-          empty: true
-          content: 'No content available.'
           plugin_id: text_custom
       arguments: {  }
       relationships:
@@ -460,6 +458,20 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+      empty:
+        area_text_custom:
+          id: area_text_custom
+          table: views
+          field: area_text_custom
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content: '<div class="mb-5"></div>'
+          plugin_id: text_custom
+      defaults:
+        empty: false
     cache_metadata:
       contexts:
         - 'languages:language_content'
