POWR-412 intial bulk edit admin views, admin tab changes

--- a/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle.yml
@@ -2,14 +2,17 @@ uuid: 0e63a77c-2eab-4c1b-80fb-c72db2053976
 langcode: en
 status: true
 dependencies:
+  config:
+    - search_api_page.search_api_page.search_portland_gov
   module:
+    - portland
     - system
   theme:
     - cloudy
 id: searchapipagesearchblockformwithportlandstyle
 theme: cloudy
 region: featured_top
-weight: 0
+weight: -16
 provider: null
 plugin: portland_search_block
 settings:
