--- a/web/sites/default/config/views.view.group_members.yml
+++ b/web/sites/default/config/views.view.group_members.yml
@@ -10,7 +10,7 @@ dependencies:
 _core:
   default_config_hash: VbvlMutXPE0EiR18Bv3ko8ils0ieg3fnz072bTkskAY
 id: group_members
-label: 'Group members'
+label: 'Admin: Group: Members'
 module: group
 description: ''
 tag: ''
