--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -18,7 +18,7 @@ dependencies:
 _core:
   default_config_hash: '-q24ItFnGZ_VzC81AjnWyuzS-enfH7uGYBz7Pe2kLP4'
 id: media
-label: Media
+label: 'Admin: Media'
 module: views
 description: ''
 tag: ''
@@ -193,8 +193,10 @@ display:
           empty_zero: false
           hide_alter_empty: true
           action_title: Action
-          include_exclude: exclude
-          selected_actions: {  }
+          include_exclude: include
+          selected_actions:
+            - archive_media
+            - publish_media
           entity_type: media
           plugin_id: media_bulk_form
         thumbnail__target_id:
