--- a/web/sites/default/config/views.view.user_admin_people.yml
+++ b/web/sites/default/config/views.view.user_admin_people.yml
@@ -7,7 +7,7 @@ dependencies:
 _core:
   default_config_hash: wTJRNzsLVTenCALONNlVfgm_pBOlqucSPuVFLOD56ck
 id: user_admin_people
-label: People
+label: 'Admin: People'
 module: user
 description: 'Find and manage people interacting with your site.'
 tag: default
