--- a/web/themes/custom/cloudy/cloudy.info.yml
+++ b/web/themes/custom/cloudy/cloudy.info.yml
@@ -24,6 +24,7 @@ regions:
   page_bottom: 'Page bottom'
   highlighted: Highlighted
   featured_top: 'Featured top'
+  tabs: 'Administrative Tabs'
   breadcrumb: Breadcrumb
   content: Content
   sidebar_first: 'Sidebar first'
