--- a/web/sites/default/config/block.block.cloudy_local_tasks.yml
+++ b/web/sites/default/config/block.block.cloudy_local_tasks.yml
@@ -8,8 +8,8 @@ _core:
   default_config_hash: qHdtze2DZ2mFfaJadxjZz6epm92_SN9SAFY4yJGl8Fo
 id: cloudy_local_tasks
 theme: cloudy
-region: content
-weight: -5
+region: tabs
+weight: -15
 provider: null
 plugin: local_tasks_block
 settings:
