--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -7,13 +7,14 @@ dependencies:
     - gnode
     - group
     - node
+    - user
 _core:
   default_config_hash: ZSKjHkl45YTbsYHiq_H7py04GDuX95t-GOHAAb8ZFbk
 id: group_nodes
-label: 'Group nodes'
+label: 'Admin: Group: Content'
 module: gnode
-description: 'Lists all of the nodes that have been added to a group.'
-tag: ''
+description: 'Lists all of the content that has been added to a group.'
+tag: 'Admin, Group'
 base_table: node_field_data
 base_field: nid
 core: 8.x
@@ -42,7 +43,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
+          submit_button: Filter
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -82,8 +83,9 @@ display:
           summary: ''
           description: ''
           columns:
+            node_bulk_form: node_bulk_form
             title: title
-            status: status
+            moderation_state: moderation_state
             type: type
             created: created
             changed: changed
@@ -91,6 +93,11 @@ display:
             delete_node_1: delete_node_1
             edit_node_1: edit_node_1
           info:
+            node_bulk_form:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             title:
               sortable: true
               default_sort_order: asc
@@ -98,8 +105,8 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            status:
-              sortable: true
+            moderation_state:
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
@@ -157,6 +164,61 @@ display:
           hide_empty: false
           default_field_elements: true
       fields:
+        node_bulk_form:
+          id: node_bulk_form
+          table: node
+          field: node_bulk_form
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Node operations bulk form'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          action_title: Action
+          include_exclude: include
+          selected_actions:
+            - archive_content
+            - publish_content
+          entity_type: node
+          plugin_id: node_bulk_form
         title:
           id: title
           table: node_field_data
@@ -669,7 +731,7 @@ display:
           exposed: true
           expose:
             operator_id: title_op
-            label: Title
+            label: 'Filter by title contains'
             description: ''
             use_operator: false
             operator: title_op
@@ -681,9 +743,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              layout_manager: '0'
-              media_creator: '0'
-              media_manager: '0'
+              sitewide_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -700,6 +760,48 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: string
+        uid:
+          id: uid
+          table: node_field_data
+          field: uid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: uid_op
+            label: 'Filter by author/owner'
+            description: ''
+            use_operator: false
+            operator: uid_op
+            identifier: uid
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: uid
+          plugin_id: user_name
         type:
           id: type
           table: node_field_data
@@ -713,7 +815,7 @@ display:
           exposed: true
           expose:
             operator_id: type_op
-            label: Type
+            label: 'Filter by type'
             description: ''
             use_operator: false
             operator: type_op
@@ -725,8 +827,9 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              group_admin: '0'
+              sitewide_editor: '0'
             reduce: false
+            argument: ''
           is_grouped: false
           group_info:
             label: ''
@@ -814,7 +917,7 @@ display:
         groups:
           1: AND
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
         - group_membership.roles.permissions
         - 'languages:language_content'
@@ -842,7 +945,7 @@ display:
         context: '0'
         menu_name: main
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
         - group_membership.roles.permissions
         - 'languages:language_content'
