POWR-412 update homepage taxonomy blocks and styles

--- a/web/sites/default/config/cloudy.settings.yml
+++ b/web/sites/default/config/cloudy.settings.yml
@@ -63,7 +63,7 @@ bootstrap_barrio_region_clean_featured_top: 0
 bootstrap_barrio_region_class_featured_top: ''
 bootstrap_barrio_region_clean_breadcrumb: 1
 bootstrap_barrio_region_class_breadcrumb: ''
-bootstrap_barrio_region_clean_content: 1
+bootstrap_barrio_region_clean_content: 0
 bootstrap_barrio_region_class_content: ''
 bootstrap_barrio_region_clean_sidebar_first: 1
 bootstrap_barrio_region_class_sidebar_first: ''
@@ -88,3 +88,5 @@ bootstrap_barrio_region_class_footer_fifth: row
 bootstrap_barrio_button: 0
 bootstrap_barrio_table_style: ''
 bootstrap_barrio_table_head: ''
+bootstrap_barrio_region_clean_tabs: 0
+bootstrap_barrio_region_class_tabs: row
