--- a/web/sites/default/config/views.view.audiences_homepage.yml
+++ b/web/sites/default/config/views.view.audiences_homepage.yml
@@ -9,7 +9,7 @@ dependencies:
     - taxonomy
     - user
 id: audiences_homepage
-label: Audiences
+label: 'Homepage: Block: Audiences'
 module: views
 description: 'Homepage menu of actions a community member might take in interacting with the city.'
 tag: ''
@@ -54,11 +54,14 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: default
+        type: html_list
         options:
           grouping: {  }
-          row_class: ''
+          row_class: 'col-md mb-3'
           default_row_class: false
+          type: ul
+          wrapper_class: item-list
+          class: 'list-unstyled row'
       row:
         type: fields
         options:
@@ -131,7 +134,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<i class="fas fa-{{ field_fontawesome_icon }} fa-fw mr-3"></i>'
+            text: '<i class="fas fa-{{ field_fontawesome_icon }} fa-fw"></i>'
             make_link: false
             path: ''
             absolute: false
@@ -194,7 +197,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<span class="audience"><a href="{{ view_taxonomy_term }}" class="list-group-item list-group-item-action align-middle">{{ field_fontawesome_icon }} {{ name }}</a></span>'
+            text: "<div class=\"list-group h-100 border-0 p-0\">\n  <a href=\"{{ view_taxonomy_term }}\" class=\"list-group-item list-group-item-action flex-column h-100 text-center\">\n    <div class=\"icon\">{{ field_fontawesome_icon }}</div>\n    <div class=\"name\">{{ name }}</div>\n  </a>\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -313,7 +316,7 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
-      css_class: 'mb-4 list-group'
+      css_class: ''
     cache_metadata:
       max-age: -1
       contexts:
