--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -10,10 +10,10 @@ dependencies:
     - text
     - user
 id: topics
-label: Topics
+label: 'Homepage: Block: Topics'
 module: views
 description: 'Homepage menu of topics a community member might use to find content within the city.'
-tag: ''
+tag: 'Homepage, taxonomy'
 base_table: taxonomy_term_field_data
 base_field: tid
 core: 8.x
@@ -58,7 +58,7 @@ display:
         type: grid
         options:
           grouping: {  }
-          columns: 2
+          columns: 3
           automatic_width: false
           alignment: horizontal
           col_class_default: false
