POWR-412 clean up service and bureau teasers to make listing pages look nice

--- a/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
@@ -31,13 +32,12 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - 'bundle_field:node'
         - node_title
         - field_summary
     fields:
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 0
         label: hidden
         formatter: default
         settings:
@@ -50,38 +50,6 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-      'bundle_field:node':
-        plugin_id: 'bundle_field:node'
-        weight: 0
-        label: hidden
-        formatter: default
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow: true
-            ow-el: ''
-            ow-cl: 'text-muted align-right'
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
 id: node.city_service.teaser
 targetEntityType: node
 bundle: city_service
@@ -89,7 +57,7 @@ mode: teaser
 content:
   field_summary:
     type: string
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
