--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_building
     - field.field.group.bureau_office.field_email
+    - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
     - field.field.group.bureau_office.field_phone
@@ -27,42 +28,8 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - 'bundle_field:group'
         - label
         - field_summary
-    fields:
-      'bundle_field:group':
-        plugin_id: 'bundle_field:group'
-        weight: 0
-        label: hidden
-        formatter: default
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow: true
-            ow-el: ''
-            ow-cl: 'text-muted align-right'
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
 id: group.bureau_office.teaser
 targetEntityType: group
 bundle: bureau_office
@@ -70,7 +37,7 @@ mode: teaser
 content:
   field_summary:
     type: string
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
@@ -79,7 +46,7 @@ content:
   label:
     label: hidden
     type: string
-    weight: 1
+    weight: 0
     region: content
     settings:
       link_to_entity: true
@@ -119,6 +86,7 @@ hidden:
   field_audience: true
   field_building: true
   field_email: true
+  field_legacy_path: true
   field_logo: true
   field_official_organization_name: true
   field_phone: true
