POWR-412 homepage blocks show only terms with content, add term admin page with counts

--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -35,10 +35,11 @@ third_party_settings:
       weight: 20
       format_type: fieldset
       format_settings:
+        label: 'Contact Information'
+        description: 'City offices may provide mailing address, contact phone, and contact email information to the public by filling out these fields.'
         id: contact-information
         classes: ''
-        description: 'City offices may provide mailing address, contact phone, and contact email information to the public by filling out these fields.'
-        required_fields: true
+        required_fields: false
       label: 'Contact Information'
 id: group.bureau_office.default
 targetEntityType: group
@@ -48,7 +49,7 @@ content:
   field_address:
     weight: 21
     settings:
-      default_country: null
+      default_country: US
     third_party_settings: {  }
     type: address_default
     region: content
