--- a/web/sites/default/config/views.view.audiences_homepage.yml
+++ b/web/sites/default/config/views.view.audiences_homepage.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.taxonomy_term.field_fontawesome_icon
     - taxonomy.vocabulary.audience
   module:
+    - node
     - taxonomy
     - user
 id: audiences_homepage
@@ -239,7 +240,8 @@ display:
           settings:
             link_to_entity: false
           group_column: value
-          group_columns: {  }
+          group_columns:
+            entity_id: entity_id
           group_rows: true
           delta_limit: 0
           delta_offset: 0
@@ -313,10 +315,21 @@ display:
       header: {  }
       footer: {  }
       empty: {  }
-      relationships: {  }
+      relationships:
+        reverse__node__field_audience:
+          id: reverse__node__field_audience
+          table: taxonomy_term_field_data
+          field: reverse__node__field_audience
+          relationship: none
+          group_type: group
+          admin_label: field_audience
+          required: true
+          entity_type: taxonomy_term
+          plugin_id: entity_reverse
       arguments: {  }
       display_extenders: {  }
       css_class: ''
+      group_by: true
     cache_metadata:
       max-age: -1
       contexts:
