--- a/web/sites/default/config/views.view.community_actions.yml
+++ b/web/sites/default/config/views.view.community_actions.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.taxonomy_term.field_fontawesome_icon
     - taxonomy.vocabulary.community_actions
   module:
+    - node
     - taxonomy
     - user
 id: community_actions
@@ -239,7 +240,8 @@ display:
           settings:
             link_to_entity: false
           group_column: value
-          group_columns: {  }
+          group_columns:
+            entity_id: entity_id
           group_rows: true
           delta_limit: 0
           delta_offset: 0
@@ -281,10 +283,21 @@ display:
       header: {  }
       footer: {  }
       empty: {  }
-      relationships: {  }
+      relationships:
+        reverse__node__field_community_actions:
+          id: reverse__node__field_community_actions
+          table: taxonomy_term_field_data
+          field: reverse__node__field_community_actions
+          relationship: none
+          group_type: group
+          admin_label: field_community_actions
+          required: true
+          entity_type: taxonomy_term
+          plugin_id: entity_reverse
       arguments: {  }
       display_extenders: {  }
       css_class: ''
+      group_by: true
     cache_metadata:
       max-age: -1
       contexts:
