--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.taxonomy_term.field_fontawesome_icon
     - taxonomy.vocabulary.topics
   module:
+    - node
     - taxonomy
     - text
     - user
@@ -242,7 +243,8 @@ display:
           settings:
             link_to_entity: false
           group_column: value
-          group_columns: {  }
+          group_columns:
+            entity_id: entity_id
           group_rows: true
           delta_limit: 0
           delta_offset: 0
@@ -306,7 +308,7 @@ display:
           click_sort_column: value
           type: text_default
           settings: {  }
-          group_column: value
+          group_column: entity_id
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -401,9 +403,20 @@ display:
           admin_label: Parent
           required: false
           plugin_id: standard
+        reverse__node__field_topics:
+          id: reverse__node__field_topics
+          table: taxonomy_term_field_data
+          field: reverse__node__field_topics
+          relationship: none
+          group_type: group
+          admin_label: field_topics
+          required: true
+          entity_type: taxonomy_term
+          plugin_id: entity_reverse
       arguments: {  }
       display_extenders: {  }
       css_class: ''
+      group_by: true
     cache_metadata:
       max-age: -1
       contexts:
