--- a/web/sites/default/config/views.view.admin_taxonomy.yml
+++ b/web/sites/default/config/views.view.admin_taxonomy.yml
@@ -24,7 +24,7 @@ display:
       access:
         type: perm
         options:
-          perm: 'access content'
+          perm: 'access content overview'
       cache:
         type: tag
         options: {  }
