--- a/web/sites/default/config/block.block.cloudy_views_block__alerts_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__alerts_block_1.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_views_block__alerts_block_1
 theme: cloudy
-region: highlighted
-weight: -13
+region: top_header
+weight: -15
 provider: null
 plugin: 'views_block:alerts-block_1'
 settings:
