POWR-412 fix search result displays for most types

--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -1,9 +1,9 @@
-uuid: 2626f3ff-04f1-487f-a042-e64bb67f2b41
+uuid: c4894ade-dd43-4c41-b748-082389cc9ace
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.group.search_result
+    - core.entity_view_mode.group.teaser
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
     - field.field.group.project.field_legacy_path
@@ -11,26 +11,18 @@ dependencies:
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
     - group.type.project
-  module:
-    - ds
-third_party_settings:
-  ds:
-    layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
-      disable_css: false
-      entity_classes: all_classes
-      settings: {  }
-    regions:
-      content:
-        - 'bundle_field:group'
-        - label
-    fields:
-      'bundle_field:group':
-        plugin_id: 'bundle_field:group'
-        weight: 0
-        label: hidden
-        formatter: default
+id: group.project.teaser
+targetEntityType: group
+bundle: project
+mode: teaser
+content:
+  field_summary:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings:
+      ds:
         ft:
           id: expert
           settings:
@@ -46,8 +38,8 @@ third_party_settings:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: ''
-            fi-cl: 'text-muted text-uppercase'
+            fi-el: p
+            fi-cl: lead
             fi-at: ''
             suffix: ''
             lbw: false
@@ -58,15 +50,12 @@ third_party_settings:
             fis: false
             fis-def-at: false
             fi-def-at: false
-id: group.project.search_result
-targetEntityType: group
-bundle: project
-mode: search_result
-content:
+    type: string
+    region: content
   label:
     label: hidden
     type: string
-    weight: 1
+    weight: 0
     region: content
     settings:
       link_to_entity: false
@@ -78,6 +67,5 @@ hidden:
   field_date_time_range: true
   field_legacy_path: true
   field_shortname_or_acronym: true
-  field_summary: true
   field_topics: true
   uid: true
