--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.search_result.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_building
     - field.field.group.bureau_office.field_email
+    - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
     - field.field.group.bureau_office.field_phone
@@ -93,7 +94,7 @@ content:
             fis-at: ''
             fi: true
             fi-el: p
-            fi-cl: lead
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
