POWR-374 - refactored secondary link to not appear as a button, using classnames in field_link_style list option values.

--- a/web/sites/default/config/field.storage.paragraph.field_link_style.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_link_style.yml
@@ -12,10 +12,10 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: primary
+      value: 'btn btn-primary'
       label: 'Call to action button'
     -
-      value: outline-secondary
+      value: 'link link-secondary'
       label: 'Secondary link'
   allowed_values_function: ''
 module: options
