POWR-406-1 Add & enable google_analytics module

--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
         "drupal/field_group": "^1.0",
+        "drupal/google_analytics": "^2.3",
         "drupal/group": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/lightning_media": "~2.1",
