POWR-374 - reverted revisions that replaced group Phone field with Telephone paragraph field; we don't want to use paragraphs here.

--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -10,9 +10,9 @@ dependencies:
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_logo
     - field.field.group.elected_official.field_official_title
+    - field.field.group.elected_official.field_phone
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
-    - field.field.group.elected_official.field_telephone
     - group.type.elected_official
     - image.style.thumbnail
   module:
@@ -20,15 +20,15 @@ dependencies:
     - field_group
     - image
     - maxlength
-    - paragraphs
+    - telephone
 third_party_settings:
   field_group:
     group_contact_information:
       children:
         - field_address
-        - field_building
         - field_email
-        - field_telephone
+        - field_phone
+        - field_building
       parent_name: ''
       weight: 20
       format_type: fieldset
@@ -51,7 +51,7 @@ content:
     type: address_default
     region: content
   field_building:
-    weight: 7
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -69,7 +69,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_email:
-    weight: 8
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -100,6 +100,13 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_phone:
+    weight: 8
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: telephone_default
+    region: content
   field_shortname_or_acronym:
     weight: 2
     settings:
@@ -120,18 +127,6 @@ content:
         maxlength_js_enforce: true
         maxlength_js_truncate_html: true
     type: string_textarea
-    region: content
-  field_telephone:
-    weight: 9
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-    third_party_settings: {  }
-    type: entity_reference_paragraphs
     region: content
   label:
     type: string_textfield
