--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -9,9 +9,9 @@ dependencies:
     - field.field.group.program.field_email
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
+    - field.field.group.program.field_phone
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
-    - field.field.group.program.field_telephone
     - field.field.group.program.field_topics
     - group.type.program
     - image.style.thumbnail
@@ -21,15 +21,15 @@ dependencies:
     - field_group
     - image
     - maxlength
-    - paragraphs
+    - telephone
 third_party_settings:
   field_group:
     group_contact_information:
       children:
         - field_address
-        - field_building
+        - field_phone
         - field_email
-        - field_telephone
+        - field_building
       parent_name: ''
       weight: 20
       format_type: fieldset
@@ -58,7 +58,7 @@ content:
     type: chosen_select
     region: content
   field_building:
-    weight: 7
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -90,6 +90,13 @@ content:
       progress_indicator: throbber
     region: content
     third_party_settings: {  }
+  field_phone:
+    weight: 7
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: telephone_default
+    region: content
   field_shortname_or_acronym:
     weight: 1
     settings:
@@ -111,18 +118,6 @@ content:
         maxlength_js_truncate_html: true
     region: content
     type: string_textarea
-  field_telephone:
-    weight: 9
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-    third_party_settings: {  }
-    type: entity_reference_paragraphs
-    region: content
   field_topics:
     weight: 4
     settings: {  }
