--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
@@ -8,18 +8,17 @@ dependencies:
     - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_building
     - field.field.group.bureau_office.field_email
-    - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
+    - field.field.group.bureau_office.field_phone
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
-    - field.field.group.bureau_office.field_telephone
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
   module:
     - address
     - ds
-    - entity_reference_revisions
+    - telephone
 third_party_settings:
   ds:
     layout:
@@ -31,9 +30,9 @@ third_party_settings:
     regions:
       content:
         - field_official_organization_name
-        - field_telephone
         - field_address
         - field_email
+        - field_phone
 id: group.bureau_office.contact_information
 targetEntityType: group
 bundle: bureau_office
@@ -82,21 +81,26 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-  field_telephone:
-    type: entity_reference_revisions_entity_view
-    weight: 0
+  field_phone:
+    type: telephone_link
+    weight: 3
     region: content
     label: hidden
     settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
+      title: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   changed: true
   created: true
   field_audience: true
   field_building: true
-  field_legacy_path: true
   field_logo: true
   field_shortname_or_acronym: true
   field_summary: true
