--- a/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
@@ -8,12 +8,11 @@ dependencies:
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
     - field.field.group.elected_official.field_email
-    - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_logo
     - field.field.group.elected_official.field_official_title
+    - field.field.group.elected_official.field_phone
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
-    - field.field.group.elected_official.field_telephone
     - group.type.elected_official
 id: group.elected_official.teaser
 targetEntityType: group
@@ -43,9 +42,8 @@ hidden:
   field_building: true
   field_bureaus: true
   field_email: true
-  field_legacy_path: true
   field_logo: true
   field_official_title: true
+  field_phone: true
   field_shortname_or_acronym: true
-  field_telephone: true
   uid: true
