--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -9,9 +9,9 @@ dependencies:
     - field.field.group.program.field_email
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
+    - field.field.group.program.field_phone
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
-    - field.field.group.program.field_telephone
     - field.field.group.program.field_topics
     - group.type.program
 id: group.program.default
@@ -72,7 +72,7 @@ hidden:
   field_email: true
   field_legacy_path: true
   field_logo: true
+  field_phone: true
   field_shortname_or_acronym: true
-  field_telephone: true
   field_topics: true
   uid: true
