POWR-347 categories on a node view update and placement

--- a/web/sites/default/config/block.block.views_block__categories_on_a_node_2_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__categories_on_a_node_2_block_1.yml
@@ -1,21 +1,21 @@
-uuid: 42f47913-1ebc-4ca9-8ee6-d7bf80aaa396
+uuid: 015f6099-5b28-4c0e-8fb7-f6dd2ece2957
 langcode: en
 status: true
 dependencies:
   config:
-    - views.view.categories_on_a_node
+    - views.view.categories_on_a_node_2
   module:
     - views
   theme:
     - cloudy
-id: views_block__categories_on_a_node_block_1
+id: views_block__categories_on_a_node_2_block_1
 theme: cloudy
 region: sidebar_second
 weight: 0
 provider: null
-plugin: 'views_block:categories_on_a_node-block_1'
+plugin: 'views_block:categories_on_a_node_2-block_1'
 settings:
-  id: 'views_block:categories_on_a_node-block_1'
+  id: 'views_block:categories_on_a_node_2-block_1'
   label: ''
   provider: views
   label_display: visible
