--- a/web/sites/default/config/views.view.categories_on_a_node_2.yml
+++ b/web/sites/default/config/views.view.categories_on_a_node_2.yml
@@ -1,4 +1,4 @@
-uuid: 080bebb3-7d74-40b8-9519-5eb353716ae3
+uuid: fa808e8c-e246-494d-88f6-cb8bbd32577d
 langcode: en
 status: true
 dependencies:
@@ -10,8 +10,8 @@ dependencies:
     - node
     - taxonomy
     - user
-id: categories_on_a_node
-label: 'Categories on a node'
+id: categories_on_a_node_2
+label: 'categories on a node'
 module: views
 description: ''
 tag: ''
@@ -51,8 +51,9 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: none
+        type: some
         options:
+          items_per_page: 5
           offset: 0
       style:
         type: html_list
@@ -209,10 +210,6 @@ display:
           entity_field: nid
           plugin_id: node_nid
       display_extenders: {  }
-      filter_groups:
-        operator: AND
-        groups:
-          1: AND
     cache_metadata:
       max-age: -1
       contexts:
@@ -229,7 +226,6 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      block_description: 'Categories on a node'
     cache_metadata:
       max-age: -1
       contexts:
