--- a/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle.yml
@@ -1,4 +1,4 @@
-uuid: ab762bdc-4b57-4ade-a2be-a6838396969a
+uuid: 0e63a77c-2eab-4c1b-80fb-c72db2053976
 langcode: en
 status: true
 dependencies:
@@ -10,18 +10,19 @@ dependencies:
     - system
   theme:
     - cloudy
-id: searchapipagesearchblockform_2
+id: searchapipagesearchblockformwithportlandstyle
 theme: cloudy
 region: featured_top
 weight: -16
 provider: null
-plugin: search_api_page_form_block
+plugin: portland_search_block
 settings:
-  id: search_api_page_form_block
-  label: 'Search Api Page search block form'
-  provider: search_api_page
+  id: portland_search_block
+  label: 'Search Api Page search block form with Portland style'
+  provider: core
   label_display: '0'
   search_api_page: search_portland_gov
+  size: big
 visibility:
   request_path:
     id: request_path
