--- a/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle_2.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle_2.yml
@@ -1,29 +1,30 @@
-uuid: f277fa71-7f24-4cfe-9e78-8d68a4029083
+uuid: 8c5255b7-c74d-4aa1-813c-438d94511661
 langcode: en
 status: true
 dependencies:
   config:
     - search_api_page.search_api_page.search_portland_gov
   module:
-    - search_api_page
+    - portland
     - system
   theme:
     - cloudy
-id: searchapipagesearchblockform
+id: searchapipagesearchblockformwithportlandstyle_2
 theme: cloudy
 region: header_form
 weight: 0
 provider: null
-plugin: search_api_page_form_block
+plugin: portland_search_block
 settings:
-  id: search_api_page_form_block
-  label: 'Search Api Page search block form'
-  provider: search_api_page
+  id: portland_search_block
+  label: 'Search Api Page search block form with Portland style'
+  provider: portland
   label_display: '0'
   search_api_page: search_portland_gov
+  size: small
 visibility:
   request_path:
     id: request_path
-    pages: '<front>'
+    pages: "<front>\r\n/search"
     negate: true
     context_mapping: {  }
