--- a/web/sites/default/config/cloudy.settings.yml
+++ b/web/sites/default/config/cloudy.settings.yml
@@ -46,7 +46,7 @@ bootstrap_barrio_region_class_top_header_form: row
 bootstrap_barrio_region_clean_header: 1
 bootstrap_barrio_region_class_header: ''
 bootstrap_barrio_region_clean_header_form: 0
-bootstrap_barrio_region_class_header_form: row
+bootstrap_barrio_region_class_header_form: ''
 bootstrap_barrio_region_clean_primary_menu: 1
 bootstrap_barrio_region_class_primary_menu: ''
 bootstrap_barrio_region_clean_secondary_menu: 0
@@ -60,7 +60,7 @@ bootstrap_barrio_region_class_page_bottom: row
 bootstrap_barrio_region_clean_highlighted: 0
 bootstrap_barrio_region_class_highlighted: ''
 bootstrap_barrio_region_clean_featured_top: 0
-bootstrap_barrio_region_class_featured_top: row
+bootstrap_barrio_region_class_featured_top: ''
 bootstrap_barrio_region_clean_breadcrumb: 1
 bootstrap_barrio_region_class_breadcrumb: ''
 bootstrap_barrio_region_clean_content: 0
