POWR-374 - Updated Phone field on group types to use Cleave.js formatting, updated Contact Information display to use plain text formatter, updated help text for field, added field_phone template to manually add link, icon and +1 country code.

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
@@ -18,7 +18,6 @@ dependencies:
   module:
     - address
     - ds
-    - telephone
 third_party_settings:
   ds:
     layout:
@@ -82,12 +81,12 @@ content:
             lb-col: false
             classes: {  }
   field_phone:
-    type: telephone_link
+    type: string
     weight: 3
     region: content
     label: hidden
     settings:
-      title: ''
+      link_to_entity: false
     third_party_settings:
       ds:
         ft:
