--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -19,10 +19,10 @@ dependencies:
   module:
     - address
     - chosen_field
+    - cleave
     - field_group
     - image
     - maxlength
-    - telephone
 third_party_settings:
   field_group:
     group_contact_information:
@@ -103,8 +103,9 @@ content:
     weight: 22
     settings:
       placeholder: ''
+      country: US
     third_party_settings: {  }
-    type: telephone_default
+    type: telephone_cleave
     region: content
   field_shortname_or_acronym:
     weight: 2
