--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -17,10 +17,10 @@ dependencies:
     - image.style.thumbnail
   module:
     - address
+    - cleave
     - field_group
     - image
     - maxlength
-    - telephone
 third_party_settings:
   field_group:
     group_contact_information:
@@ -104,8 +104,9 @@ content:
     weight: 8
     settings:
       placeholder: ''
+      country: US
     third_party_settings: {  }
-    type: telephone_default
+    type: telephone_cleave
     region: content
   field_shortname_or_acronym:
     weight: 2
