POWR-423 update service location to use moderation state field. Fix building display form.

--- a/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
+    - content_moderation
     - link
 id: node.service_location.default
 targetEntityType: node
@@ -43,7 +44,7 @@ content:
     type: link_default
     region: content
   field_legacy_path:
-    weight: 51
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -66,6 +67,12 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 8
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   title:
     type: string_textfield
     weight: 0
@@ -75,13 +82,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
-  moderation_state: true
   path: true
   promote: true
   scheduled_publication: true
