--- a/web/sites/default/config/core.entity_form_display.node.building.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.building.default.yml
@@ -29,7 +29,7 @@ content:
     type: address_default
     region: content
   field_legacy_path:
-    weight: 51
+    weight: 6
     settings:
       size: 60
       placeholder: ''
@@ -38,42 +38,21 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 8
+    weight: 7
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 7
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  promote:
-    type: boolean_checkbox
-    settings:
-      display_label: true
     weight: 4
     region: content
+    settings: {  }
     third_party_settings: {  }
   scheduled_publication:
     type: datetime_default
     weight: 6
     region: content
     settings: {  }
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 9
-    region: content
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 5
-    region: content
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -93,6 +72,11 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 5
     region: content
-hidden: {  }
+    settings: {  }
+    third_party_settings: {  }
+hidden:
+  promote: true
+  status: true
+  sticky: true
