POWR-425 add some column and image float styles.

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "drupal/facets": "^1.0",
         "drupal/field_group": "^1.0",
         "drupal/group": "^1.0",
+        "drupal/hsts": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/lightning_media": "~2.1",
         "drupal/link_class": "^1.3",
