--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -18,10 +18,10 @@ dependencies:
   module:
     - address
     - chosen_field
-    - cleave
     - field_group
     - image
     - maxlength
+    - telephone
 third_party_settings:
   field_group:
     group_contact_information:
@@ -94,9 +94,8 @@ content:
     weight: 7
     settings:
       placeholder: ''
-      country: US
     third_party_settings: {  }
-    type: telephone_cleave
+    type: telephone_default
     region: content
   field_shortname_or_acronym:
     weight: 1
