--- a/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
@@ -11,7 +11,6 @@ dependencies:
     - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
-    - content_moderation
     - link
 id: node.service_location.default
 targetEntityType: node
@@ -68,10 +67,12 @@ content:
     type: string_textfield
     region: content
   moderation_state:
-    type: moderation_state_default
+    type: string_textfield
     weight: 8
     region: content
-    settings: {  }
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   title:
     type: string_textfield
