--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
@@ -18,6 +18,7 @@ dependencies:
   module:
     - address
     - ds
+    - telephone
 third_party_settings:
   ds:
     layout:
@@ -81,12 +82,12 @@ content:
             lb-col: false
             classes: {  }
   field_phone:
-    type: string
+    type: telephone_link
     weight: 3
     region: content
     label: hidden
     settings:
-      link_to_entity: false
+      title: ''
     third_party_settings:
       ds:
         ft:
