--- a/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
@@ -16,6 +16,7 @@ dependencies:
     - group.type.elected_official
   module:
     - address
+    - telephone
 id: group.elected_official.contact_information
 targetEntityType: group
 bundle: elected_official
@@ -44,12 +45,12 @@ content:
       link_to_entity: false
     third_party_settings: {  }
   field_phone:
-    type: string
+    type: telephone_link
     weight: 2
     region: content
     label: hidden
     settings:
-      link_to_entity: false
+      title: ''
     third_party_settings: {  }
 hidden:
   changed: true
