--- a/web/sites/default/config/core.entity_view_display.group.program.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.contact_information.yml
@@ -16,6 +16,7 @@ dependencies:
     - group.type.program
   module:
     - address
+    - telephone
 id: group.program.contact_information
 targetEntityType: group
 bundle: program
@@ -36,12 +37,12 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_phone:
-    type: string
+    type: telephone_link
     weight: 3
     region: content
     label: above
     settings:
-      link_to_entity: false
+      title: ''
     third_party_settings: {  }
   label:
     label: hidden
